Fixing broken styles on the contribute page

--- a/ckanext/ngds/ngdsui/public/css/default.css
+++ b/ckanext/ngds/ngdsui/public/css/default.css
@@ -1487,6 +1487,7 @@ div.module-content {
 
 .control-group input[type="text"], .control-group textarea {
 	width:460px;
+	margin-left:40px;
 }
 
 .control-group input {
@@ -1520,6 +1521,7 @@ label.control-label {
 	position:absolute;
 	left:60px;
 	padding-top:10px;
+	width:140px;
 }
 
 div.module-content form.dataset-form {
@@ -1531,6 +1533,7 @@ div.controls select {
 	width:200px;
 	/* margin-left:210px; */
 	margin-top:5px;
+	margin-left:40px;
 	height:25px;
 }
 
@@ -1538,7 +1541,7 @@ div.controls div#bbox-map {
 	width: 445px;
 	height: 300px;
 	border: 1px solid #CCC;
-	margin-left: 205px;
+	margin-left: 170px;
 	padding-right: 0px;
 	padding-left: 0px;
 }
@@ -1859,7 +1862,7 @@ div#login-page section {
 
 
 .form-horizontal .control-label {
-  width: 120px;
+  width: 140px;
   line-height: 1.3;
   padding-top: 9px;
   text-align: right;
